Closed Bug 156523 Opened 23 years ago Closed 23 years ago

Alternate XSLT stylesheet applied, should not since there is default

Categories

(Core :: XSLT, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: hjtoi-bugzilla, Assigned: peterv)

References

()

Details

Attachments

(1 file)

Haven't actually looked at this if this is XSLT specific code or does it happen with CSS as well, need to find out. The XML file has two xml-stylesheet processing instructions: first is the default, second is alternate. I don't think we should automatically apply the alternate. IE doesn't.
*** Bug 156529 has been marked as a duplicate of this bug. ***
not sure if nsXMLContentSink::LoadXSLStyleSheet should bail out if we have more than one XSLT sheet here. Maybe even nsXMLContentSink::ProcessStyleLink as loading CSS for the source of a transformed XSLT doesn't make an awful lot of sense to me. peterv?
Comment on attachment 96678 [details] [diff] [review] don't load alternate XSLT stylesheets. r=sicking
Attachment #96678 - Flags: review+
Comment on attachment 96678 [details] [diff] [review] don't load alternate XSLT stylesheets. sr=heikki
Attachment #96678 - Flags: superreview+
fix is in, all other stuff is for other bugs. Like doing multiple primaries right.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
mass verifying
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: