bug 156523, don't load alternate XSLT stylesheets, r=sicking, sr=heikki